2005-05-21  Dalibor Topic  <robilad@kaffe.org>

        * native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkPixbufDecoder.c
        (area_updated): Delete jpixels reference after use to avoid wasting references.

2005-05-20  Audrius Meskauskas, <AudriusA@Bioinformatics.org>
    * doc/www.gnu.org/tasks.wml: Adding CORBA task.

2005-05-20  Roman Kennke  <roman@kennke.org>

	* java/awt/DefaultKeyboardFocusManager.java:
	Documentation fixes.

2005-05-20  Roman Kennke  <roman@kennke.org>

	* javax/swing/text/JTextComponent.java
	(CaretBlinkTimer): Added inner class to make caret blinking.
	(constructor): Create one instance of CaretBlinkTimer.
	(setEditable): Switch caret on and off depending on the editable
	property.
	(setCare): Register caret with the CaretBlinkTimer.
	* javax/swing/text/DefaultCaret.java:
	Set a good blink rate of 500ms.

2005-05-20  Roman Kennke  <roman@kennke.org>

	* javax/swing/JEditorPane.java:
	(processComponentKeyEvent): Removed this method. This blocks
	key events from beeing delivered and is not in the API.
	(processKeyEvent): Removed this method. This blocks
	key events from beeing delivered and is not in the API.

2005-05-20  Roman Kennke  <roman@kennke.org>

	* java/awt/DefaultKeyboardFocusManager.java
	(processKeyEvent): Properly swallow KEY_TYPED events after
	a KEY_PRESSED event for a focusTraversalKey has been received.
	Otherwise the focusTraversalKey (e.g. a TAB) would end up
	beeing delivered to the focused component.

2005-05-20  Roman Kennke  <roman@kennke.org>

	* java/awt/Component.java
	(dispatchEventImpl): Let MouseEvents trigger a focus change
	on lightweight components.

2005-05-20  Roman Kennke  <roman@kennke.org>

	* javax/swing/JTextField.java
	(constructor): Set default value for the horizontalAlignment
	property.

2005-05-20  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicInternalFrameTitlePane.java
	(setButtonIcons): Added checks for null references.

2005-05-20  Roman Kennke  <roman@kennke.org>
