@@ -1,3 +1,11 @@
+2005-05-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/text/DateFormatSymbols.java:
+	(getStringArray(java.util.ResourceBundle,String)):
+	Fixed parsing of new property files.
+	(getZoneStrings(java.util.ResourceBundle)):
+	Likewise.
+	
 2005-05-21  Dalibor Topic  <robilad@kaffe.org>
 
         * native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkPixbufDecoder.c
